# osdo

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
druidengine/: app.cpp  app.h  beziatorpanel.cpp  beziatorpanel.h  deimgui.cpp  deimgui.h  main.cpp  subwindow.cpp  subwindow.h  window.cpp  window.h
osdo/: beziator.cpp  beziator.h  bijective.h  buffer.cpp  buffer.h  camera.cpp  camera.h  conf.h  context.cpp  context.h  easyvector.h  framebuffer.cpp  framebuffer.h  glbindable.cpp  glbindable.h  glbinder.cpp  glbinder.h  image.cpp  image.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  osdo.cpp  osdo.h  renderbuffer.cpp  renderbuffer.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
res/: bezier.frag  bezier.geom  bezier.tesc  bezier.tese  bezier.vert  car.odom  editmode.fs  editmode.vert  editmode.vs  lighting.fs  lighting.vs  lightless.vs  nuklear.fs  nuklear.vs  simple.fs  teapot.odom  test.odom  textured.fs  textured.vs
src/: app.c  app.cpp  app.h  basis.c  basis.cpp  basis.h  beziator.c  beziator.cpp  beziator.h  bijective.c  bijective.h  bmesh.c  bmesh.h  buffer.c  buffer.cpp  buffer.h  camera.c  camera.h  conf.h  deimgui.c  deimgui.cpp  deimgui.h  main.c  main.cpp  mesh.c  mesh.cpp  mesh.h  model.c  model.h  nkglfw.c  nkglfw.h  nuklear.c  object.c  object.h  osdo.h  scene.c  scene.cpp  scene.h  shader.c  shader.cpp  (+5 more)
src/old/: nkglfw.c  nuklear.c
